--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,15 @@ html,body{
 }
 
 .background{
-	height:110vh;
+	height:100%;
 	overflow:hidden;
 	background:url('../img/red-mobile.jpg');
 	background-size: cover;
 	position:absolute;
 	top:0;
-	left:-25%;
-	z-index:-1;
-	width:200%;
+	left:0;
+	z-index:-999;
+	width:100%;
 	transition:transform 0.3s;
 }
 
@@ -29,6 +29,7 @@ html,body{
 	align-items: center;
 	background-color: rgba(255,255,255,0.7);
 	user-select: none;
+	z-index:999999;
 }
 .rare{
 	/* color:transparent; */
